--- a/dynamodb-plugin/plugin.yaml
+++ b/dynamodb-plugin/plugin.yaml
@@ -6,7 +6,7 @@ inputs:
 - label: Table Name
   type: text
   name: table_name
-  pattern: '[a-z0-9]([-a-z0-9]*[a-z0-9])?(\.[a-z0-9]([-a-z0-9]*[a-z0-9])?)*'
+  #pattern: '[a-z0-9]([-a-z0-9]*[a-z0-9])?(\.[a-z0-9]([-a-z0-9]*[a-z0-9])?)*'
   default: ""  
   global: true
 - label: Hash Key
